correct spacing between/around grid

--- a/style.css
+++ b/style.css
@@ -213,9 +213,11 @@ img {
   border: solid red 1px;
   padding-top:10px;
   padding-bottom:10px;
-  padding-right:15px;
-  padding-left:15px;
+  padding-right: 0;
+  padding-left: 0;
 }
+
+
 
 .category-description {
   text-align: center;
@@ -230,6 +232,7 @@ img {
 .category-page-thumbnail {
   /*float: left;*/
   padding:0;
+  padding-bottom: 10px;
 }
 /* CHANGE TO GRID */
 
@@ -443,9 +446,14 @@ img {
 
 /* CATEGORY PAGE */
 /* ================================================================= */
+.category-gallery-container {
+  padding-right:5px;
+  padding-left:5px;
+}
+
 .category-page-thumbnail {
   /*float: left;*/
-  /*padding: 0.6em;*/
+  padding: 10px;
 }
 
 @media (min-width: 1000px) {
